[gd_scene load_steps=4 format=3 uid="uid://c5c1j13l8t455"]

[ext_resource type="Script" path="res://scripts/ui/inventory/inventory.gd" id="1_pg0ku"]
[ext_resource type="PackedScene" uid="uid://cqq80mplnpcpb" path="res://scenes/ui/inventory/card_slot.tscn" id="2_4toth"]
[ext_resource type="Texture2D" uid="uid://dtmls2tn8ksct" path="res://assets/inv_bckgd.png" id="8_hgryv"]

[node name="Inventory" type="Control"]
layout_mode = 3
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -700.0
grow_horizontal = 0
grow_vertical = 2
size_flags_vertical = 0
mouse_force_pass_scroll_events = false
script = ExtResource("1_pg0ku")
card_slot_scene = ExtResource("2_4toth")

[node name="DragNode" type="Control" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 355.0
offset_bottom = 68.0

[node name="Background" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
region_rect = Rect2(0, 0, 1704, 976)

[node name="Control" type="Control" parent="Background"]
custom_minimum_size = Vector2(0, 65)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="Background/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Background/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Background/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Background/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
theme_override_constants/margin_left = 2

[node name="Header" type="HBoxContainer" parent="Background/VBoxContainer/MarginContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2

[node name="TitleBar" type="TextureRect" parent="Background/VBoxContainer/MarginContainer/VBoxContainer/MarginContainer/Header"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
expand_mode = 1

[node name="Label" type="Label" parent="Background/VBoxContainer/MarginContainer/VBoxContainer/MarginContainer/Header/TitleBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Ekwipunek
"

[node name="MarginContainer2" type="MarginContainer" parent="Background/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Background/VBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Background/VBoxContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="TextureRect" type="TextureRect" parent="Background/VBoxContainer/MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(280, 900)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("8_hgryv")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="Background/VBoxContainer/MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/TextureRect"]
layout_mode = 2
offset_right = 632.0
offset_bottom = 888.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 45
theme_override_constants/margin_top = 45
theme_override_constants/margin_right = 45
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Background/VBoxContainer/MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/TextureRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="CardGrid" type="GridContainer" parent="Background/VBoxContainer/MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/TextureRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Background/VBoxContainer/MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/TextureRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_vertical = 10
alignment = 1

[node name="PrevButton" type="Button" parent="Background/VBoxContainer/MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/TextureRect/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 25)
layout_mode = 2
text = "<"

[node name="Label" type="Label" parent="Background/VBoxContainer/MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/TextureRect/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 30)
layout_mode = 2
text = "1/1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NextButton" type="Button" parent="Background/VBoxContainer/MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/TextureRect/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 30)
layout_mode = 2
text = ">"
